--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,18 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/*": ["src/app/*"],
-      "@auth/*": ["src/auth/*"],
-      "@users/*": ["src/users/*"],
-      "@shared/*": ["src/shared/*"]
+      "@app/*": [
+        "src/app/*"
+      ],
+      "@auth/*": [
+        "src/auth/*"
+      ],
+      "@users/*": [
+        "src/users/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ]
     }
   }
 }
