feat: refresh token module

--- a/package.json
+++ b/package.json
@@ -79,8 +79,9 @@
     "moduleNameMapper": {
       "^@app(.*)$": "<rootDir>/app$1",
       "^@auth(.*)$": "<rootDir>/auth$1",
-      "^@users(.*)$": "<rootDir>/users$1",
-      "^@shared(.*)$": "<rootDir>/shared$1"
+      "^@refresh-tokens(.*)$": "<rootDir>/refresh-tokens$1",
+      "^@shared(.*)$": "<rootDir>/shared$1",
+      "^@users(.*)$": "<rootDir>/users$1"
     },
     "coverageThreshold": {
       "./src/": {
